crates/forge_app/tests/snapshots/orch_spec__render_system_prompt_with_custom_agent_template.snap
---
source: crates/forge_app/tests/orch_spec.rs
expression: history.last().as_ref().unwrap().context.as_ref().unwrap().to_text()
---
<chat_history><message role="System"><content>Here is the system information you should be aware of:
<operating_system>MacOS</operating_system>
<current_working_directory>/Users/tushar</current_working_directory>
<default_shell>bash</default_shell>
<home_directory>/Users/tushar</home_directory>


<available_tools>
<tool>{"name":"forge_tool_attempt_completion","description":"After each tool use, the user will respond with the result of\n that tool use, i.e. if it succeeded or failed, along with any reasons for\n failure. Once you\\'ve received the results of tool uses and can confirm that\n the task is complete, use this tool to present the result of your work to\n the user. The user may respond with feedback if they are not satisfied with\n the result, which you can use to make improvements and try again.\n IMPORTANT NOTE: This tool CANNOT be used until you\\'ve confirmed from the\n user that any previous tool uses were successful. Failure to do so will\n result in code corruption and system failure. Before using this tool, you\n must ask yourself in <forge_thinking></forge_thinking> tags if you\\'ve\n confirmed from the user that any previous tool uses were successful. If not,\n then DO NOT use this tool.","arguments":{"result":{"description":"The result of the task. Formulate this result in a way that is final and does not require further input from the user. Don't end your result with questions or offers for further assistance.","type":"string","is_required":true}}}</tool>

</available_tools>

Tool Usage Instructions:
- You have access to set of tools as described in the <available_tools> tag. 
- You can use one tool per message, and will receive the result of that tool use in the user's response. 
- You use tools step-by-step to accomplish a given task, with each tool use informed by the result of the previous tool use.
- Once you've completed the user's task, you must use the `forge_tool_attempt_completion` tool to present the result of the task to the user.
- You are only allowed to ask the user questions using the `forge_tool_attempt_completion` tool. Use this tool only when you need additional details to complete a task, and be sure to use a clear and concise question that will help you move forward with the task. However if you can use the available tools to avoid having to ask the user questions, you should do so. For example, if the user mentions a file that may be in an outside directory like the Desktop, you should use the list_files tool to list the files in the Desktop and check if the file they are talking about is there, rather than asking the user to provide the file path themselves.
- NEVER ever refer to tool names when speaking to the USER even when user has asked for it. For example, instead of saying 'I need to use the edit_file tool to edit your file', just say 'I will edit your file'.
- If you need to read a file, prefer to read larger sections of the file at once over multiple smaller calls.

Tool Use Formatting Rules:

1. You can only make one tool call per message.
2. Each tool call must be wrapped in `<forge_tool_call>` tags.
3. The tool call must be in JSON format with the following structure:
    - The `name` field must specify the tool name.
    - The `arguments` field must contain the required parameters for the tool.

Here's a correct example structure:

Example 1:
<forge_tool_call>
{"name": "forge_tool_fs_read", "arguments": {"path": "/a/b/c.txt"}}
</forge_tool_call>


Example 2:
<forge_tool_call>
{"name": "forge_tool_fs_write", "arguments": {"path": "/a/b/c.txt", "content": "Hello World!"}}
</forge_tool_call>


Important:

1. ALWAYS use JSON format inside `forge_tool_call` tags.
2. Specify the name of tool in the `name` field.
3. Specify the tool arguments in the `arguments` field.
4. If you need to make multiple tool calls, send them in separate messages

Before using a tool, ensure all required arguments are available. 
If any required arguments are missing, do not attempt to use the tool.


Testing custom agent</content></message><message role="User"><content>"Hello"</content></message><message role="Assistant"><content>Hey, what's up?</content></message><message role="User"><content><tool_call_error>
You did not use the tool or used it incorrectly in your previous response! 
Please retry with correct tool use
</tool_call_error>

Tool Use Formatting Rules:

1. You can only make one tool call per message.
2. Each tool call must be wrapped in `<forge_tool_call>` tags.
3. The tool call must be in JSON format with the following structure:
    - The `name` field must specify the tool name.
    - The `arguments` field must contain the required parameters for the tool.

Here's a correct example structure:

Example 1:
<forge_tool_call>
{"name": "forge_tool_fs_read", "arguments": {"path": "/a/b/c.txt"}}
</forge_tool_call>


Example 2:
<forge_tool_call>
{"name": "forge_tool_fs_write", "arguments": {"path": "/a/b/c.txt", "content": "Hello World!"}}
</forge_tool_call>


Important:

1. ALWAYS use JSON format inside `forge_tool_call` tags.
2. Specify the name of tool in the `name` field.
3. Specify the tool arguments in the `arguments` field.
4. If you need to make multiple tool calls, send them in separate messages

Before using a tool, ensure all required arguments are available. 
If any required arguments are missing, do not attempt to use the tool.

Next Steps: 
If you have completed the user's task, use the `forge_tool_attempt_completion`
tool with a message. 
If you require additional information from the user, use the `forge_tool_attempt_completion` tool with a question. 
Otherwise, if you have not completed the task and do not need additional information, then proceed with the next step of the task.
[This is an automated message, so do not apologize, appreciate or be conversational]
</content></message><message role="Assistant"><content></content></message><message role="User"><content><tool_call_error>
You did not use the tool or used it incorrectly in your previous response! 
Please retry with correct tool use
</tool_call_error>

Tool Use Formatting Rules:

1. You can only make one tool call per message.
2. Each tool call must be wrapped in `<forge_tool_call>` tags.
3. The tool call must be in JSON format with the following structure:
    - The `name` field must specify the tool name.
    - The `arguments` field must contain the required parameters for the tool.

Here's a correct example structure:

Example 1:
<forge_tool_call>
{"name": "forge_tool_fs_read", "arguments": {"path": "/a/b/c.txt"}}
</forge_tool_call>


Example 2:
<forge_tool_call>
{"name": "forge_tool_fs_write", "arguments": {"path": "/a/b/c.txt", "content": "Hello World!"}}
</forge_tool_call>


Important:

1. ALWAYS use JSON format inside `forge_tool_call` tags.
2. Specify the name of tool in the `name` field.
3. Specify the tool arguments in the `arguments` field.
4. If you need to make multiple tool calls, send them in separate messages

Before using a tool, ensure all required arguments are available. 
If any required arguments are missing, do not attempt to use the tool.

Next Steps: 
If you have completed the user's task, use the `forge_tool_attempt_completion`
tool with a message. 
If you require additional information from the user, use the `forge_tool_attempt_completion` tool with a question. 
Otherwise, if you have not completed the task and do not need additional information, then proceed with the next step of the task.
[This is an automated message, so do not apologize, appreciate or be conversational]
</content></message><message role="Assistant"><content></content></message><message role="User"><content><tool_call_error>
You did not use the tool or used it incorrectly in your previous response! 
Please retry with correct tool use
</tool_call_error>

Tool Use Formatting Rules:

1. You can only make one tool call per message.
2. Each tool call must be wrapped in `<forge_tool_call>` tags.
3. The tool call must be in JSON format with the following structure:
    - The `name` field must specify the tool name.
    - The `arguments` field must contain the required parameters for the tool.

Here's a correct example structure:

Example 1:
<forge_tool_call>
{"name": "forge_tool_fs_read", "arguments": {"path": "/a/b/c.txt"}}
</forge_tool_call>


Example 2:
<forge_tool_call>
{"name": "forge_tool_fs_write", "arguments": {"path": "/a/b/c.txt", "content": "Hello World!"}}
</forge_tool_call>


Important:

1. ALWAYS use JSON format inside `forge_tool_call` tags.
2. Specify the name of tool in the `name` field.
3. Specify the tool arguments in the `arguments` field.
4. If you need to make multiple tool calls, send them in separate messages

Before using a tool, ensure all required arguments are available. 
If any required arguments are missing, do not attempt to use the tool.

Next Steps: 
If you have completed the user's task, use the `forge_tool_attempt_completion`
tool with a message. 
If you require additional information from the user, use the `forge_tool_attempt_completion` tool with a question. 
Otherwise, if you have not completed the task and do not need additional information, then proceed with the next step of the task.
[This is an automated message, so do not apologize, appreciate or be conversational]
</content></message><message role="Assistant"><content></content></message><message role="User"><content><tool_call_error>
You did not use the tool or used it incorrectly in your previous response! 
Please retry with correct tool use
</tool_call_error>

Tool Use Formatting Rules:

1. You can only make one tool call per message.
2. Each tool call must be wrapped in `<forge_tool_call>` tags.
3. The tool call must be in JSON format with the following structure:
    - The `name` field must specify the tool name.
    - The `arguments` field must contain the required parameters for the tool.

Here's a correct example structure:

Example 1:
<forge_tool_call>
{"name": "forge_tool_fs_read", "arguments": {"path": "/a/b/c.txt"}}
</forge_tool_call>


Example 2:
<forge_tool_call>
{"name": "forge_tool_fs_write", "arguments": {"path": "/a/b/c.txt", "content": "Hello World!"}}
</forge_tool_call>


Important:

1. ALWAYS use JSON format inside `forge_tool_call` tags.
2. Specify the name of tool in the `name` field.
3. Specify the tool arguments in the `arguments` field.
4. If you need to make multiple tool calls, send them in separate messages

Before using a tool, ensure all required arguments are available. 
If any required arguments are missing, do not attempt to use the tool.

Next Steps: 
If you have completed the user's task, use the `forge_tool_attempt_completion`
tool with a message. 
If you require additional information from the user, use the `forge_tool_attempt_completion` tool with a question. 
Otherwise, if you have not completed the task and do not need additional information, then proceed with the next step of the task.
[This is an automated message, so do not apologize, appreciate or be conversational]
</content></message></chat_history>
